Prevent long A(H)BC names from causing overflow on PC sheet

--- a/src/styles/actor/character/_character.scss
+++ b/src/styles/actor/character/_character.scss
@@ -57,7 +57,7 @@
         .abcd {
             grid-area: details;
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(2, 13em);
             grid-row-gap: 0.5rem;
             justify-content: start;
             padding-left: 0.75rem;
